--- a/sage-demo-dev.properties
+++ b/sage-demo-dev.properties
@@ -1,4 +1,5 @@
-
-server.port=9089
+eureka.client.serviceUrl.defaultZone  = https://sage:sageEureka@test-api.coveredbysage.com:8080/eureka
+spring.application.name=sage-pcs-test-feign-client
+server.port=1000
 
 
