--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,4 @@
-
-server.port=8080
-
-
+ 
+eureka.client.serviceUrl.defaultZone  = https://sage:sageEureka@test-api.coveredbysage.com:8080/eureka
+spring.application.name=sage-pcs-test-feign-client
+server.port=1000
