--- a/sage-demo-dev.properties
+++ b/sage-demo-dev.properties
@@ -1,3 +1,3 @@
-eureka.client.serviceUrl.defaultZone  = https://sage:sageEureka@test-api.coveredbysage.com:8080/eureka
+eureka.client.serviceUrl.defaultZone  = https://sage:sageEureka@localhost:8080/eureka
 spring.application.name=sage-demo-feign-client
 server.port=8999
